--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,12 +28,11 @@ body {
 }
 // Mainscreen =========================
 .mainscreen {
-position: absolute;
 width: 100%;
 height: 100vh;
 color: #fff;
     &-bg {
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         width: 100%;
@@ -78,5 +77,21 @@ color: #fff;
     }
     &-subtitle {
         font-size: 1.5vw;
+    }
+}
+
+// About ==============================
+.about {
+    .about-wrapper {
+    }
+    .about-photo {
+    }
+    .about-info {
+    }
+    .about-title {
+    }
+    .new-text {
+    }
+    .about-text {
     }
 }
