--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,22 @@ h1 {
   line-height: 1.2em;
 }
 
+h2 {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 3vw;
+  line-height: 1.2em;
+}
+
 .chinese {
   font-family: Noto Serif SC;
+}
+
+.change-box {
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 3vw;
+  line-height: 1.2em;
 }
 
 body {
@@ -75,12 +89,13 @@ body {
 }
 
 .container {
-  max-width: 89vw;
+  max-width: 69vw;
   margin: 0 auto;
 }
 
 .new-text {
   font-size: 0;
+  display: none;
 }
 
 .mainscreen {
@@ -121,9 +136,8 @@ body {
 .mainscreen-title {
   display: flex;
   align-items: center;
-  text-align: center;
+  text-align: left;
   margin-bottom: 20px;
-  text-align: justify;
   width: 27.77vw;
   height: 27.77vw;
   padding: 1.39vw;
@@ -135,4 +149,74 @@ body {
 }
 .mainscreen-subtitle {
   font-size: 1.5vw;
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 100px;
+}
+.about-title {
+  margin-bottom: 6vw;
+  border: #fff 0.2vw solid;
+  width: 40%;
+  text-align: center;
+  padding: 20px;
+}
+.about-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.about-photo {
+  position: relative;
+  display: inline-flex;
+  flex: 1 1 30%;
+  align-items: center;
+  justify-content: center;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  border: 0.55vw #fff solid;
+}
+.about-photo::after {
+  content: "";
+  position: absolute;
+  top: -1.4vw;
+  left: -1.4vw;
+  width: 100%;
+  height: 100%;
+  border: 2px solid #fff;
+  z-index: -5;
+}
+.about-photo::before {
+  content: "";
+  position: absolute;
+  top: 1.4vw;
+  right: -1.4vw;
+  width: 100%;
+  height: 100%;
+  border: 4px solid #fff;
+  z-index: -5;
+}
+.about-photo img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 101%;
+  height: 105%;
+  margin: -2px 0 0 -2px;
+}
+.about-info {
+  display: inline-flex;
+  flex: 1 1 30%;
+  flex-direction: column;
+  color: #fff;
+  padding: 0 2.77vw;
+  box-sizing: border-box;
+}
+.about-text {
+  font-size: 1.25vw;
+  line-height: 1.2em;
+  margin-bottom: 1.4vw;
 }
