--- a/css/style.css
+++ b/css/style.css
@@ -61,12 +61,11 @@ input {
 
 h1 {
   text-transform: uppercase;
-  font-size: 3.3vw;
+  font-size: 2.5vw;
   line-height: 1.2em;
 }
 
 h2 {
-  color: #fff;
   text-transform: uppercase;
   font-size: 3vw;
   line-height: 1.2em;
@@ -77,15 +76,14 @@ h2 {
 }
 
 .change-box {
-  color: #fff;
   text-transform: uppercase;
-  font-size: 3vw;
   line-height: 1.2em;
 }
 
 body {
   font-family: Comfortaa;
   width: 100%;
+  color: #fff;
 }
 
 .container {
@@ -102,10 +100,22 @@ body {
   z-index: -10;
 }
 
+.section-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 6vw;
+  border: #fff 0.2vw solid;
+  width: 40%;
+  min-height: 8.33vw;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
 .mainscreen {
   width: 100%;
   height: 100vh;
-  color: #fff;
 }
 .mainscreen-bg {
   position: fixed;
@@ -142,14 +152,15 @@ body {
   align-items: center;
   text-align: left;
   margin-bottom: 20px;
-  width: 27.77vw;
-  height: 27.77vw;
+  width: 25vw;
+  height: 25vw;
   padding: 1.39vw;
   border: #fff solid 4px;
   cursor: pointer;
 }
 .mainscreen-title h1 {
   display: inline-block;
+  margin: 0 auto;
 }
 .mainscreen-subtitle {
   font-size: 1.5vw;
@@ -159,16 +170,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 100px;
-}
-.about-title {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 6vw;
-  border: #fff 0.2vw solid;
-  width: 40%;
-  padding: 20px;
+  padding-bottom: 200px;
 }
 .about-wrapper {
   display: flex;
@@ -211,13 +213,12 @@ body {
      object-fit: cover;
   width: 101%;
   height: 105%;
-  margin: -2px 0 0 -2px;
+  margin: -2px;
 }
 .about-info {
   display: inline-flex;
   flex: 1 1 30%;
   flex-direction: column;
-  color: #fff;
   padding: 0 2.77vw;
   box-sizing: border-box;
 }
@@ -225,4 +226,78 @@ body {
   font-size: 1.25vw;
   line-height: 1.2em;
   margin-bottom: 1.4vw;
+}
+
+.achievements {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.achievements-wrapper {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 14vw;
+}
+.achievements-item {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  width: 33.3333%;
+  margin: 3.5vw 2vw;
+  border: #fff 0.28vw solid;
+}
+.achievements-item:first-child {
+  margin-left: 0;
+  margin-top: 0;
+  margin-bottom: 7vw;
+}
+.achievements-item:last-child {
+  margin-right: 0;
+  margin-top: 7vw;
+  margin-bottom: 0;
+}
+.achievements-item--img {
+  position: relative;
+  width: 100%;
+  height: 30vw;
+  overflow: hidden;
+  border-bottom: #fff 0.28vw solid;
+  margin-bottom: 1.4vw;
+}
+.achievements-item--img::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3764705882);
+  transition: all 0.3s ease;
+}
+.achievements-item--img:hover::after {
+  background-color: rgba(0, 0, 0, 0);
+}
+.achievements-item--img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.achievements-item--info {
+  display: flex;
+  flex-direction: column;
+  gap: 1.4vw;
+  padding: 0 0.7vw 0.7vw 0.7vw;
+  box-sizing: border-box;
+  margin-bottom: auto;
+}
+.achievements-item--title {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 1.7vw;
+  line-height: 1.2em;
+}
+.achievements-item--text {
+  font-size: 1.25vw;
+  line-height: 1.6em;
 }
