--- a/css/style.css
+++ b/css/style.css
@@ -78,12 +78,14 @@ h2 {
 .change-box {
   text-transform: uppercase;
   line-height: 1.2em;
+  z-index: 10;
 }
 
 body {
   font-family: Comfortaa;
   width: 100%;
   color: #fff;
+  background-color: #111;
 }
 
 .container {
@@ -97,9 +99,13 @@ body {
 }
 
 .change-text {
-  z-index: -10;
+  z-index: 5;
 }
 
+.section {
+  position: relative;
+  width: 100%;
+}
 .section-title {
   display: flex;
   align-items: center;
@@ -111,6 +117,17 @@ body {
   min-height: 8.33vw;
   padding: 20px;
   box-sizing: border-box;
+  cursor: pointer;
+}
+.section-title--black {
+  border: #111 0.2vw solid;
+  color: #111;
+}
+.section-count {
+  position: absolute;
+  bottom: 2vw;
+  right: 4vw;
+  font-size: 10vw;
 }
 
 .mainscreen {
@@ -118,7 +135,7 @@ body {
   height: 100vh;
 }
 .mainscreen-bg {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -139,6 +156,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3764705882);
+  box-shadow: 0px -30px 2vw 2vw rgb(17, 17, 17) inset;
 }
 .mainscreen-wrapper {
   display: flex;
@@ -170,7 +188,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 200px;
+  padding: 6.94vw 0 13.89vw;
 }
 .about-wrapper {
   display: flex;
@@ -229,14 +247,26 @@ body {
 }
 
 .achievements {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 6.94vw 0 13.89vw;
+  color: #111;
+}
+.achievements::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fffafa;
+  z-index: -10;
 }
 .achievements-wrapper {
   display: flex;
   flex-direction: row;
-  margin-bottom: 14vw;
 }
 .achievements-item {
   flex: 1 1 auto;
@@ -244,7 +274,7 @@ body {
   flex-direction: column;
   width: 33.3333%;
   margin: 3.5vw 2vw;
-  border: #fff 0.28vw solid;
+  border: #111 0.28vw solid;
 }
 .achievements-item:first-child {
   margin-left: 0;
@@ -261,7 +291,7 @@ body {
   width: 100%;
   height: 30vw;
   overflow: hidden;
-  border-bottom: #fff 0.28vw solid;
+  border-bottom: #111 0.28vw solid;
   margin-bottom: 1.4vw;
 }
 .achievements-item--img::after {
@@ -271,7 +301,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.3764705882);
+  background-color: rgba(0, 0, 0, 0.1254901961);
   transition: all 0.3s ease;
 }
 .achievements-item--img:hover::after {
