--- a/scss/style.scss
+++ b/scss/style.scss
@@ -22,12 +22,14 @@ h2 {
 .change-box {
     text-transform: uppercase;
     line-height: 1.2em;
+    z-index: 10;
 }
 // Main styles ========================
 body {
     font-family: Comfortaa;
     width: 100%;
     color: #fff;
+    background-color: #111;
 }
 .container {
     max-width: 69vw;
@@ -38,26 +40,43 @@ body {
     display: none;
 }
 .change-text {
-    z-index: -10;
+    z-index: 5;
 }
-.section-title {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    margin-bottom: 6vw;
-    border: #fff 0.2vw solid;
-    width: 40%;
-    min-height: 8.33vw;
-    padding: 20px;
-    box-sizing: border-box;
+.section{
+    position: relative;
+    width: 100%;
+    &-title {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        margin-bottom: 6vw;
+        border: #fff 0.2vw solid;
+        width: 40%;
+        min-height: 8.33vw;
+        padding: 20px;
+        box-sizing: border-box;
+        cursor: pointer;
+        &--black {
+            border: #111 0.2vw solid;
+            color: #111;
+        }
+    }
+    &-count {
+        position: absolute;
+        bottom: 2vw;
+        right: 4vw;
+        font-size: 10vw;
+        // opacity: 0.6;
+        // z-index: -5;
+    }
 }
 // Mainscreen =========================
 .mainscreen {
 width: 100%;
 height: 100vh;
     &-bg {
-        position: fixed;
+        position: absolute;
         top: 0;
         left: 0;
         width: 100%;
@@ -76,6 +95,7 @@ height: 100vh;
             width: 100%;
             height: 100%;
             background-color: #00000060;
+            box-shadow: 0px -30px 2vw 2vw rgba(17, 17, 17, 1) inset;
         }
     }
     &-wrapper {
@@ -110,7 +130,7 @@ height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 200px;
+    padding: 6.94vw 0 13.89vw;
     &-wrapper {
         display: flex;
         flex-direction: row;
@@ -167,13 +187,25 @@ height: 100vh;
 
 // Achievements =======================
 .achievements {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 6.94vw 0 13.89vw;
+    color: #111;
+    &::before{
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #fffafa;
+        z-index: -10;
+    }
     &-wrapper {
         display: flex;
         flex-direction: row;
-        margin-bottom: 14vw;
     }
     &-item {
         flex: 1 1 auto;
@@ -181,7 +213,7 @@ height: 100vh;
         flex-direction: column;
         width: 33.3333%;
         margin: 3.5vw 2vw;
-        border: #fff 0.28vw solid;
+        border: #111 0.28vw solid;
         &:first-child {
             margin-left: 0;
             margin-top: 0;
@@ -197,7 +229,7 @@ height: 100vh;
             width: 100%;
             height: 30vw;
             overflow: hidden;
-            border-bottom: #fff 0.28vw solid;
+            border-bottom: #111 0.28vw solid;
             margin-bottom: 1.4vw;
             &::after{
                 content: '';
@@ -206,7 +238,7 @@ height: 100vh;
                 left: 0;
                 width: 100%;
                 height: 100%;
-                background-color: #00000060;
+                background-color: #00000020;
                 transition: all .3s ease;
                 
             }
