--- a/css/style.css
+++ b/css/style.css
@@ -75,17 +75,11 @@ h2 {
   font-family: Noto Serif SC;
 }
 
-.change-box {
-  text-transform: uppercase;
-  line-height: 1.2em;
-  z-index: 10;
-}
-
 body {
   font-family: Comfortaa;
   width: 100%;
   color: #fff;
-  background-color: #111;
+  background-color: rgb(17, 17, 17);
 }
 
 .container {
@@ -99,7 +93,9 @@ body {
 }
 
 .change-text {
-  z-index: 5;
+  z-index: -5;
+  text-transform: uppercase;
+  line-height: 1.2em;
 }
 
 .section {
@@ -148,15 +144,14 @@ body {
   -o-object-fit: cover;
      object-fit: cover;
 }
-.mainscreen-bg::after {
+.mainscreen-bg::before {
   content: "";
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.3764705882);
-  box-shadow: 0px -30px 2vw 2vw rgb(17, 17, 17) inset;
+  height: 6vh;
+  background: linear-gradient(0deg, rgb(17, 17, 17) 0%, rgba(17, 17, 17, 0.8) 50%, rgba(17, 17, 17, 0) 100%);
 }
 .mainscreen-wrapper {
   display: flex;
