--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,17 +19,12 @@ h2 {
 .chinese {
     font-family: Noto Serif SC;
 }
-.change-box {
-    text-transform: uppercase;
-    line-height: 1.2em;
-    z-index: 10;
-}
 // Main styles ========================
 body {
     font-family: Comfortaa;
     width: 100%;
     color: #fff;
-    background-color: #111;
+    background-color: rgb(17, 17, 17);
 }
 .container {
     max-width: 69vw;
@@ -40,7 +35,9 @@ body {
     display: none;
 }
 .change-text {
-    z-index: 5;
+    z-index: -5;
+    text-transform: uppercase;
+    line-height: 1.2em;
 }
 .section{
     position: relative;
@@ -67,8 +64,6 @@ body {
         bottom: 2vw;
         right: 4vw;
         font-size: 10vw;
-        // opacity: 0.6;
-        // z-index: -5;
     }
 }
 // Mainscreen =========================
@@ -87,15 +82,14 @@ height: 100vh;
             height: 100%;
             object-fit: cover;
         }
-        &::after {
+        &::before {
             content: '';
             position: absolute;
-            top: 0;
+            bottom: 0;
             left: 0;
             width: 100%;
-            height: 100%;
-            background-color: #00000060;
-            box-shadow: 0px -30px 2vw 2vw rgba(17, 17, 17, 1) inset;
+            height: 6vh;
+            background: linear-gradient(0deg, rgba(17, 17, 17,1) 0%, rgba(17, 17, 17,0.8) 50%, rgba(17, 17, 17,0) 100%);
         }
     }
     &-wrapper {
