--- a/scss/style.scss
+++ b/scss/style.scss
@@ -265,3 +265,19 @@ height: 100vh;
         }
     }
 }
+
+// Contact ============================
+.section {
+    &-bg {
+    }
+    &-wrapper {
+    }
+    &-text {
+    }
+    &-table {
+    }
+    &-piece {
+    }
+    &-tel {
+    }
+}
