--- a/scss/style.scss
+++ b/scss/style.scss
@@ -51,7 +51,7 @@ body {
         border: #fff 0.2vw solid;
         width: 40%;
         min-height: 8.33vw;
-        padding: 20px;
+        padding: 1.38vw;
         box-sizing: border-box;
         cursor: pointer;
         &--black {
@@ -103,11 +103,11 @@ height: 100vh;
         display: flex;
         align-items: center;
         text-align: left;
-        margin-bottom: 20px;
+        margin-bottom: 1.39vw;
         width: 25vw;
         height: 25vw;
         padding: 1.39vw;
-        border: #fff solid 4px;
+        border: #fff solid 0.28vw;
         cursor: pointer;
         & h1 {
             display: inline-block;
@@ -145,7 +145,7 @@ height: 100vh;
             left: -1.4vw;
             width: 100%;
             height: 100%;
-            border: 2px solid #fff;
+            border: 0.14vw solid #fff;
             z-index: -5;
         }
         &::before{
@@ -155,14 +155,14 @@ height: 100vh;
             right: -1.4vw;
             width: 100%;
             height: 100%;
-            border: 4px solid #fff;
+            border: 0.28vw solid #fff;
             z-index: -5;
         }
         & img {
             object-fit: cover;
             width: 101%;
             height: 105%;
-            margin: -2px;
+            margin: -0.14vw;
         }
     }
     &-info {
@@ -267,17 +267,126 @@ height: 100vh;
 }
 
 // Contact ============================
-.section {
+.contact {
+    position: relative;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 6.94vw 0 13.89vw;
+    overflow: hidden;
     &-bg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -10;
+        & img {
+            width: 100%;
+            object-fit: cover;
+        }
+        &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #00000080;
+        }
+
     }
     &-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
     }
     &-text {
-    }
-    &-table {
-    }
-    &-piece {
+        width: 50%;
+        font-size: 1.8vw;
+        line-height: 1.2em;
+        margin-bottom: 1.8vw;
     }
     &-tel {
+        display: block;
+        position: relative;
+        width: fit-content;
+        height: fit-content;
+        padding: 1vw;
+        margin-bottom: 1.8vw;
+        box-sizing: border-box;
+        line-height: 1.2em;
+        font-size: 1.8vw;
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 30%;
+            height: 50%;
+            border-left: 0.28vw #fff solid;
+            border-top: 0.28vw #fff solid;
+        }
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            width: 30%;
+            height: 50%;
+            border-right: 0.28vw #fff solid;
+            border-bottom: 0.28vw #fff solid;
+        }
+    }
+    &-messengers {
+        position: relative;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        flex-wrap: wrap;
+        width: 20.83vw;
+        height: 20.83vw;
+        border-radius: 0.28vw;
+        &::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 0;
+            rotate: 45deg;
+            width: 100%;
+            height: 0.28vw;
+            background-color: #fff;
+        }
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: 50%;
+            left: 0;
+            rotate: -45deg;
+            width: 100%;
+            height: 0.28vw;
+            background-color: #fff;
+        }
+    }
+    &-icon {
+        display: inline-flex;
+        height: 33.333333%;
+        width: 50%;
+        &:first-child {
+            width: 100%;
+            justify-content: center;
+        }
+        &:nth-child(3){
+            justify-content: flex-end;
+        }
+        &:last-child {
+            width: 100%;
+            justify-content: center;
+        }
+        & img {
+            height: 100%;
+        }
+
     }
 }
