--- a/css/style.css
+++ b/css/style.css
@@ -80,10 +80,11 @@ body {
   width: 100%;
   color: #fff;
   background-color: rgb(17, 17, 17);
+  cursor: default;
 }
 
 .container {
-  max-width: 69vw;
+  max-width: 62.5vw;
   margin: 0 auto;
 }
 
@@ -183,7 +184,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 6.94vw 0 13.89vw;
+  padding: 2.78vw 0 8.89vw;
 }
 .about-wrapper {
   display: flex;
@@ -193,7 +194,7 @@ body {
 .about-photo {
   position: relative;
   display: inline-flex;
-  flex: 1 1 30%;
+  flex: 0 0 40%;
   align-items: center;
   justify-content: center;
   height: -webkit-fit-content;
@@ -246,7 +247,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 6.94vw 0 13.89vw;
+  padding: 2.78vw 0 13.89vw;
   color: #111;
 }
 .achievements::before {
@@ -333,7 +334,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 6.94vw 0 13.89vw;
+  padding: 2.78vw 0 2.78vw;
   overflow: hidden;
 }
 .contact-bg {
@@ -383,6 +384,7 @@ body {
   box-sizing: border-box;
   line-height: 1.2em;
   font-size: 1.8vw;
+  cursor: pointer;
 }
 .contact-tel::before {
   content: "";
@@ -391,8 +393,9 @@ body {
   left: 0;
   width: 30%;
   height: 50%;
-  border-left: 0.28vw #fff solid;
-  border-top: 0.28vw #fff solid;
+  border-left: 0.2vw #fff solid;
+  border-top: 0.2vw #fff solid;
+  transition: all 0.3s ease;
 }
 .contact-tel::after {
   content: "";
@@ -401,8 +404,17 @@ body {
   right: 0;
   width: 30%;
   height: 50%;
-  border-right: 0.28vw #fff solid;
-  border-bottom: 0.28vw #fff solid;
+  border-right: 0.2vw #fff solid;
+  border-bottom: 0.2vw #fff solid;
+  transition: all 0.3s ease;
+}
+.contact-tel:hover::before {
+  width: 100%;
+  height: 100%;
+}
+.contact-tel:hover::after {
+  width: 100%;
+  height: 100%;
 }
 .contact-messengers {
   position: relative;
@@ -410,8 +422,8 @@ body {
   flex-direction: row;
   align-items: center;
   flex-wrap: wrap;
-  width: 20.83vw;
-  height: 20.83vw;
+  width: 13.89vw;
+  height: 13.89vw;
   border-radius: 0.28vw;
 }
 .contact-messengers::before {
@@ -421,7 +433,7 @@ body {
   left: 0;
   rotate: 45deg;
   width: 100%;
-  height: 0.28vw;
+  height: 0.2vw;
   background-color: #fff;
 }
 .contact-messengers::after {
@@ -431,7 +443,7 @@ body {
   left: 0;
   rotate: -45deg;
   width: 100%;
-  height: 0.28vw;
+  height: 0.2vw;
   background-color: #fff;
 }
 .contact-icon {
@@ -443,13 +455,26 @@ body {
   width: 100%;
   justify-content: center;
 }
+.contact-icon:nth-child(2) {
+  align-items: center;
+}
 .contact-icon:nth-child(3) {
+  align-items: center;
   justify-content: flex-end;
 }
 .contact-icon:last-child {
   width: 100%;
   justify-content: center;
+  align-items: flex-end;
 }
-.contact-icon img {
+.contact-icon a {
+  display: inline-block;
+  height: 90%;
+  transition: all 0.3s ease;
+}
+.contact-icon a img {
+  height: 100%;
+}
+.contact-icon:hover a {
   height: 100%;
 }
