--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Comfortaa:regular,700);
-@import url(https://fonts.googleapis.com/css?family=Noto+Serif+SC:regular,700);
+@import url(https://fonts.googleapis.com/css?family=Ma+Shan+Zheng:regular);
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
@@ -59,6 +58,18 @@ input {
   border: none;
 }
 
+@font-face {
+  font-family: Arcon;
+  font-style: normal;
+  font-weight: 400;
+  src: url(/src/fonts/Arcon-Regular.woff2);
+}
+@font-face {
+  font-family: chinese;
+  font-style: normal;
+  font-weight: 700;
+  src: url(/src/fonts/Chinese_bold.woff2);
+}
 h1 {
   text-transform: uppercase;
   font-size: 2.5vw;
@@ -72,15 +83,15 @@ h2 {
 }
 
 .chinese {
-  font-family: Noto Serif SC;
+  font-family: chinese;
 }
 
 body {
-  font-family: Comfortaa;
   width: 100%;
-  color: #fff;
   background-color: rgb(17, 17, 17);
   cursor: default;
+  color: #fff;
+  font-family: Arcon;
 }
 
 .container {
@@ -114,6 +125,7 @@ body {
   min-height: 8.33vw;
   padding: 1.38vw;
   box-sizing: border-box;
+  font-family: chinese;
   cursor: pointer;
 }
 .section-title--black {
@@ -169,7 +181,7 @@ body {
   width: 25vw;
   height: 25vw;
   padding: 1.39vw;
-  border: #fff solid 0.28vw;
+  border: #fff solid 0.2vw;
   cursor: pointer;
 }
 .mainscreen-title h1 {
@@ -200,7 +212,7 @@ body {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
-  border: 0.55vw #fff solid;
+  border: 0.2vw #fff solid;
 }
 .about-photo::after {
   content: "";
@@ -209,7 +221,7 @@ body {
   left: -1.4vw;
   width: 100%;
   height: 100%;
-  border: 0.14vw solid #fff;
+  border: 0.1vw solid #fff;
   z-index: -5;
 }
 .about-photo::before {
@@ -219,7 +231,7 @@ body {
   right: -1.4vw;
   width: 100%;
   height: 100%;
-  border: 0.28vw solid #fff;
+  border: 0.1vw solid #fff;
   z-index: -5;
 }
 .about-photo img {
@@ -270,7 +282,8 @@ body {
   flex-direction: column;
   width: 33.3333%;
   margin: 3.5vw 2vw;
-  border: #111 0.28vw solid;
+  border: #111 0.2vw solid;
+  overflow: hidden;
 }
 .achievements-item:first-child {
   margin-left: 0;
@@ -284,10 +297,10 @@ body {
 }
 .achievements-item--img {
   position: relative;
-  width: 100%;
-  height: 30vw;
+  width: 110%;
+  height: 25vw;
   overflow: hidden;
-  border-bottom: #111 0.28vw solid;
+  border-bottom: #111 0.2vw solid;
   margin-bottom: 1.4vw;
 }
 .achievements-item--img::after {
@@ -424,7 +437,7 @@ body {
   flex-wrap: wrap;
   width: 13.89vw;
   height: 13.89vw;
-  border-radius: 0.28vw;
+  border-radius: 0.2vw;
 }
 .contact-messengers::before {
   content: "";
