--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,8 +3,19 @@
 
 
 // Fonts ==============================
-@import url(https://fonts.googleapis.com/css?family=Comfortaa:regular,700);
-@import url(https://fonts.googleapis.com/css?family=Noto+Serif+SC:regular,700);
+@import url(https://fonts.googleapis.com/css?family=Ma+Shan+Zheng:regular);
+@font-face {
+    font-family: Arcon;
+    font-style: normal;
+    font-weight: 400;
+    src: url(/src/fonts/Arcon-Regular.woff2);
+}
+@font-face {
+    font-family: chinese;
+    font-style: normal;
+    font-weight: 700;
+    src: url(/src/fonts/Chinese_bold.woff2);
+}
 
 h1 {
     text-transform: uppercase;
@@ -17,15 +28,15 @@ h2 {
     line-height: 1.2em;
 }
 .chinese {
-    font-family: Noto Serif SC;
+    font-family: chinese;
 }
 // Main styles ========================
 body {
-    font-family: Comfortaa;
     width: 100%;
-    color: #fff;
     background-color: rgb(17, 17, 17);
     cursor: default;
+    color: #fff;
+    font-family: Arcon;
 }
 .container {
     max-width: 62.5vw;
@@ -54,6 +65,7 @@ body {
         min-height: 8.33vw;
         padding: 1.38vw;
         box-sizing: border-box;
+        font-family: chinese;
         cursor: pointer;
         &--black {
             border: #111 0.2vw solid;
@@ -108,7 +120,7 @@ height: 100vh;
         width: 25vw;
         height: 25vw;
         padding: 1.39vw;
-        border: #fff solid 0.28vw;
+        border: #fff solid 0.2vw;
         cursor: pointer;
         & h1 {
             display: inline-block;
@@ -138,7 +150,7 @@ height: 100vh;
         align-items: center;
         justify-content: center;
         height: fit-content;
-        border: 0.55vw #fff solid;
+        border: 0.2vw #fff solid;
         &::after{
             content: '';
             position: absolute;
@@ -146,7 +158,7 @@ height: 100vh;
             left: -1.4vw;
             width: 100%;
             height: 100%;
-            border: 0.14vw solid #fff;
+            border: 0.1vw solid #fff;
             z-index: -5;
         }
         &::before{
@@ -156,7 +168,7 @@ height: 100vh;
             right: -1.4vw;
             width: 100%;
             height: 100%;
-            border: 0.28vw solid #fff;
+            border: 0.1vw solid #fff;
             z-index: -5;
         }
         & img {
@@ -208,7 +220,8 @@ height: 100vh;
         flex-direction: column;
         width: 33.3333%;
         margin: 3.5vw 2vw;
-        border: #111 0.28vw solid;
+        border: #111 0.2vw solid;
+        overflow: hidden;
         &:first-child {
             margin-left: 0;
             margin-top: 0;
@@ -221,10 +234,10 @@ height: 100vh;
         }
         &--img {
             position: relative;
-            width: 100%;
-            height: 30vw;
+            width: 110%;
+            height: 25vw;
             overflow: hidden;
-            border-bottom: #111 0.28vw solid;
+            border-bottom: #111 0.2vw solid;
             margin-bottom: 1.4vw;
             &::after{
                 content: '';
@@ -361,7 +374,7 @@ height: 100vh;
         flex-wrap: wrap;
         width: 13.89vw;
         height: 13.89vw;
-        border-radius: 0.28vw;
+        border-radius: 0.2vw;
         &::before {
             content: '';
             position: absolute;
